--- a/views/register.hbs
+++ b/views/register.hbs
@@ -40,7 +40,7 @@
                     <div class="form-group">
                         <label for="password">Password</label>
                         <input type="password" class="form-control" id="password" name="password"
-                            placeholder="Password"  required="required">
+                            placeholder="Enter your Password"  required="required">
                     </div>
 
                     <button type="submit" class="btn btn-primary">Register User</button>
