--- a/views/login.hbs
+++ b/views/login.hbs
@@ -31,12 +31,13 @@
                 <form action="/auth/login" method="POST">
                     <div class="form-group">
                         <label for="email">Email Address</label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="Enter your Email" required="required">
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Enter your Email"
+                            required="required">
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
                         <input type="password" class="form-control" id="password" name="password"
-                            placeholder="Enter your Password"  required="required">
+                            placeholder="Enter your Password" required="required">
                     </div>
 
                     <button type="submit" class="btn btn-primary">Login</button>
